simple two page sit with metas

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="East Lansing">
     <meta name="geo.position" content="42.683398;-84.509904">
-    <meta name="twitter:card" content="T-Shirt Sale site" />
+    <meta name="twitter:card" content="T-Shirts yay" />
     <meta name="twitter:site" content="@meta_site" />
     <meta name="twitter:title" content="HTML meta test site" />
     <meta name="twitter:description" content="See and buy a snorlax t-shirt" />
