--- a/page2.html
+++ b/page2.html
@@ -13,6 +13,7 @@
     <meta name="twitter:title" content="HTML meta test site" />
     <meta name="twitter:description" content="See and buy a snorlax t-shirt" />
     <meta name="twitter:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
+    <link rel="stylesheet" href="skeleton.css">
   </head>
   <body>
     <header>
