--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <meta name="geo.placename" content="East Lansing">
     <meta name="geo.position" content="42.683398;-84.509904">
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@flickr" />
-    <meta name="twitter:title" content="Small Island Developing States Photo Submission" />
-    <meta name="twitter:description" content="View the album on Flickr." />
+    <meta name="twitter:site" content="@Meta_site" />
+    <meta name="twitter:title" content="html meta test" />
+    <meta name="twitter:description" content="Two page site used to learn html meta." />
     <meta name="twitter:image" content="https://farm6.staticflickr.com/5510/14338202952_93595258ff_z.jpg" />
+    <link rel="stylesheet" href="skeleton.css">
   </head>
   <body>
     <header>
