add facebook card

--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,10 @@
     <meta name="twitter:description" content="See and buy a snorlax t-shirt" />
     <meta name="twitter:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
     <link rel="stylesheet" href="skeleton.css">
+    <meta property="og:title" content="Snorlax shirt" />
+    <meta property="og:type" content="t-shirt sale" />
+    <meta property="og:url" content="https://storingo-kapv98gmwdanx_f2dok.surge.sh/page2.html" />
+    <meta property="og:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
   </head>
   <body>
     <header>
