--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta name="twitter:description" content="Two page site used to learn html meta." />
     <meta name="twitter:image" content="https://farm6.staticflickr.com/5510/14338202952_93595258ff_z.jpg" />
     <link rel="stylesheet" href="skeleton.css">
+    <meta property="og:title" content="Meta test home" />
+    <meta property="og:type" content="home page" />
+    <meta property="og:url" content="https://storingo-kapv98gmwdanx_f2dok.surge.sh/index.html" />
+    <meta property="og:image" content="favicon.ico" />
   </head>
   <body>
     <header>
