add facebook card

--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
     <meta name="twitter:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
     <link rel="stylesheet" href="skeleton.css">
     <meta property="og:title" content="Snorlax shirt" />
-    <meta property="og:type" content="article:tag" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://storingo-kapv98gmwdanx_f2dok.surge.sh/page2.html" />
     <meta property="og:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
   </head>
