add facebook card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Meta test home" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://storingo-kapv98gmwdanx_f2dok.surge.sh/index.html" />
-    <meta property="og:image" content="favicon.ico" />
+    <meta property="og:image" content="http://www.thinkgeek.com/images/products/frontsquare/jnhg_pokemon_snorlax_tee_mb.jpg" />
   </head>
   <body>
     <header>
